--- a/GoalTracker/src/assets/styles/main.scss
+++ b/GoalTracker/src/assets/styles/main.scss
@@ -1,3 +1,9 @@
-@import "variables";
-@import "mixins";
-@import "utils";
+@import 'variables';
+@import 'mixins';
+@import 'utils';
+
+#app {
+  min-height: 100vh;
+  width: 100%;
+  background: var(--background);
+}
